#fix #jsx #style Refactored component imports and updated element tags to improve readability and consistency. Updated the teacher information display and added a calendar function with interactive buttons and event management options.

--- a/src/pages/dashboard/dashboard.module.scss
+++ b/src/pages/dashboard/dashboard.module.scss
@@ -67,6 +67,10 @@
         }
       }
     }
+
+    &-result {
+      box-shadow: 0px 4px 4px 0px #00000040;
+    }
   }
 
   &__data-tab {
